updates istio lab 2 and 3

--- a/bookinfo/bookinfo-gateway.yaml
+++ b/bookinfo/bookinfo-gateway.yaml
@@ -35,9 +35,9 @@ spec:
   http:
     - match:
         - uri:
-            prefix: /<your-initials>/
+            prefix: /gw/
       rewrite:
-         uri: /
+        uri: /
       route:
         - destination:
             host: productpage
