--- a/bookinfo/bookinfo-gateway.yaml
+++ b/bookinfo/bookinfo-gateway.yaml
@@ -35,7 +35,7 @@ spec:
   http:
     - match:
         - uri:
-            prefix: /gw/
+            prefix: /<your-initials>/
       rewrite:
         uri: /
       route:
